--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -3,6 +3,7 @@
   <div class="col-md-8 main_content">
     {{header-tile}}
     {{swipe-tile}}
+    {{body-tile}}
   </div>
   <div class="col-md-2" />
 </div>
