--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,7 +10,7 @@ $divider-color:        #B6B6B6;
 @import 'bootstrap';
 
 body {
-  background-color: #FAFAFA;
+  background-color: #F6F6F6;
   font-size: 16px;
   font-family: 'Roboto', Helvetica, sans-serif;
   color: $primary-text-color;
@@ -19,6 +19,9 @@ body {
 a, a:hover, a:visited, a:active, a:link {
   color: $accent-color;
   text-decoration: none;
+  small {
+    color: $primary-text-color;
+  }
 }
 
 .main {
@@ -33,11 +36,19 @@ a, a:hover, a:visited, a:active, a:link {
     font-size: 1.5em;
   }
 
-  h1, h2 {
+  h3 {
+    margin: 1.6em 0 1em 0;
+  }
+
+  h1, h2, h3 {
     text-align: left;
     font-family: 'Roboto Slab', Times, serif;
     font-weight: bold;
     color: $primary-color-dark;
+  }
+
+  h4, small {
+    text-align: center;
   }
 
   p {
@@ -52,52 +63,53 @@ a, a:hover, a:visited, a:active, a:link {
 
 .swiper_main {
   height: 400px;
-  margin-bottom: 16px;
 }
 
 .swiper_mobile {
   height: 400px;
-  margin-bottom: 16px;
   display: none;
 }
 
-.swiper-slide {
+.swiper-pagination-bullet {
   background-color: $accent-color;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: $primary-color-dark;
+  opacity: 1;
+}
+
+.shakeitup, .movielookup, .ecommerce, .quoraclone {
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 
 .shakeitup {
-  text-align: center;
+  background-image: url("/assets/images/shake_it_up.png");
 }
 
-.slide_content {
-  position: relative;
-  line-height: 400px;
-  z-index: 2;
+.movielookup {
+  background-image: url("/assets/images/movie_lookup.png");
 }
 
-.shakeitup:before {
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0.6;
-    background-image: url("/assets/images/shake_it_up.png");
-    background-repeat: no-repeat;
-    background-position: 50% 0;
-    -ms-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-size: cover;
+.ecommerce {
+  background-image: url("/assets/images/ecommerce.png");
+}
+
+.quoraclone {
+  background-image: url("/assets/images/quoraclone.png");
 }
 
 @media (max-width: 700px) {
   body {
-    font-size: 10px;
+    font-size: 12px;
   }
 
   .swiper_main {
