Add social icon footer

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -2,8 +2,12 @@
   <div class="col-md-2" />
   <div class="col-md-8 main_content">
     {{header-tile}}
+    <hr>
     {{swipe-tile}}
+    <hr>
     {{body-tile}}
+    <hr>
+    {{footer-tile}}
   </div>
   <div class="col-md-2" />
 </div>
