--- a/app/components/swipe-tile/template.hbs
+++ b/app/components/swipe-tile/template.hbs
@@ -15,6 +15,7 @@
   {{swiper-slide class='slide movielookup'}}
   {{swiper-slide class='slide ecommerce'}}
   {{swiper-slide class='slide quoraclone'}}
+  {{swiper-slide class='slide salemsunshine'}}
 
 {{/swiper-container}}
 
@@ -32,6 +33,7 @@
   {{swiper-slide class='slide movielookup'}}
   {{swiper-slide class='slide ecommerce'}}
   {{swiper-slide class='slide quoraclone'}}
+  {{swiper-slide class='slide salemsunshine'}}
 
 {{/swiper-container}}
 
