Access and speed improvements

--- a/app/components/header-tile/template.hbs
+++ b/app/components/header-tile/template.hbs
@@ -1,6 +1,8 @@
 <h1>Jeffrey Ruder</h1>
 <h2>Web and Mobile Developer</h2>
 
-<p>I'm currently employing Agile methodologies to develop a React / Redux / Rails web app at <a href="https://developmentnow.com/" target="_blank">DevelopmentNow</a>. My personal projects are on <a href="https://github.com/JeffreyRuder" target="_blank">GitHub.</a></p>
+<p>I'm currently employing Agile methodologies to develop a React / Redux / Rails web app at <a href="https://developmentnow.com/" target="_blank">DevelopmentNow</a>.</p>
+
+<p>My personal projects are on <a href="https://github.com/JeffreyRuder" target="_blank">GitHub.</a></p>
 
 {{yield}}
