Add item to portfolio

--- a/app/components/swipe-tile/template.hbs
+++ b/app/components/swipe-tile/template.hbs
@@ -16,6 +16,7 @@
   {{swiper-slide class='slide ecommerce'}}
   {{swiper-slide class='slide quoraclone'}}
   {{swiper-slide class='slide salemsunshine'}}
+  {{swiper-slide class='slide candorhub'}}
 
 {{/swiper-container}}
 
@@ -34,6 +35,8 @@
   {{swiper-slide class='slide ecommerce'}}
   {{swiper-slide class='slide quoraclone'}}
   {{swiper-slide class='slide salemsunshine'}}
+  {{swiper-slide class='slide candorhub'}}
+
 
 {{/swiper-container}}
 
