--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -120,6 +120,10 @@ a, a:hover, a:visited, a:active, a:link {
   background-image: url("/assets/images/salem_sunshine.png");
 }
 
+.candorhub {
+  background-image: url("/assets/images/candorhubgallery-1-min.png");
+}
+
 .icon-row {
   text-align: center;
   a {
